ATLAS-885 pr review